<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="example.com.nccmobile.ItemActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:text="@string/editBtn"
            android:textSize="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buyBtn"
            android:text="@string/buyBtn"
            android:textSize="15dp"/>

    </LinearLayout>

    <TextView
        android:text="@string/symbol"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <TextView
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/symbol"/>

    <TextView
        android:text="@string/desc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <TextView
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/takenAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cordLong"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cordLat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/dateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTime"/>
    </LinearLayout>
</LinearLayout>
