<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="example.com.nccmobile.TradeDetailedFragment"
    android:orientation="vertical">

    <TextView
        android:text="@string/symbol"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <TextView
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/symbol"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/quantity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <TextView
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/price"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <TextView
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/dateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTime"/>
    </LinearLayout>
</LinearLayout>
